fixed margins to align projects and contacts center

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -115,6 +115,8 @@ a.thumbnail:focus {
 .dashboard-max{
 max-width: 980px;
 min-width: 640px;
+margin-left: auto;
+margin-right: auto;
 }
 
 .projects-well {
